# wahooMapsCreator

./: #howto install maps on Wahoo Elemnt Bolt.txt  #howto step-by-step map-creator.txt  .gitignore  .pylintrc  CHANGELOG.md  README.md  copyFilesToDist.sh  environment-history.yml  environment-win.yml  germany-only1.json  mac_wahoo_map_creator.py  mappack-gzip.json  requirements.txt  setup.cfg  shape2osm.py  wahoo-map-creator-osmium-working.py  wahoo-map-creator-osmium.py  wahoo_map_creator.py
.chglog/: CHANGELOG.tpl.md  config.yml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: git-release-pre.yml  git-release-test.yml  git-release.yml  tests.yml
common_python/: __main__.py  constants.py  constants_functions.py  downloader.py  file_directory_functions.py  geofabrik.py  input.py  osm_maps_functions.py  wahoo_map_creator.py
common_resources/: constants.py  constants_functions.py  downloader.py  file_directory_functions.py  geofabrik.py  germany-only4.json  input.py  osm_maps_functions.py  shape2osm.py  tag-wahoo.xml  tunnel-transform.xml
common_resources/tag_wahoo_adjusted/: tag-wahoo-poi.xml  tag-wahoo-v12.xml  tag-wahoo.xml  tag-wahoo_2.xml
conda_env/: developer.yml  enduser.yml  environment-mac.yml  environment-win.yml  gdal-dev-contour.yml  gdal-dev-pyh.yml  gdal-dev.yml  gdal-user.yml  requirements.txt  wahoo_user.yml
docs/: CONTRIBUTING.md  COPY_TO_WAHOO.md  FAQ.md  HOWTO_ADD_ROUTING_TILES_MANUALLY.MD  HOWTO_add_routing_tiles.MD  QUICKSTART_ANACONDA.md  QUICKSTART_MACOS.md  QUICKSTART_WINDOWS.md  TAGS_ON_MAP_AND_DEVICE.md  USAGE.md  USAGE_CRUISER.md
tests/: test_cli.py  test_constants.py  test_constants_geofabrik.py  test_downloader.py  test_file_directory.py  test_generated_files.py  test_geofabrik.py  test_osm_maps.py  test_setup.py
tooling/: map-info.py
tooling_mac/: mac-wahoo-map-creator.py  wahoo-map-creator-osmium-using-common.py  wahoo-map-creator-osmium-working.py
tooling_windows/: #create_maps_common.bat  #create_maps_common_gui.bat  wahoo-map-creator-osmosis-using-common-gui.py  wahoo-map-creator-windows-gui.py  windows-wahoo-map-creator.py
wahoo-mc/: __main__.py  constants.py  input.py
wahoo_mc/: __main__.py  constants_functions.py  downloader.py  file_directory_functions.py  geofabrik.py  input.py  main.py  osm_maps_functions.py
wahoomc/: __main__.py  constants.py  constants_functions.py  downloader.py  file_directory_functions.py  geofabrik.py  geofabrik_json.py  input.py  main.py  osm_data.py  osm_maps_functions.py  setup_functions.py  timings.py
(+433 files in other folders)
