[metadata]
name = wahoo_mc
version = 2.0.0a2
author = Benjamin Kreuscher
author_email = benni.kreuscher@gmail.com
description = Create maps for your Wahoo bike computer based on latest OSM maps 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/treee111/wahooMapsCreator
project_urls =
    Bug Tracker = https://github.com/treee111/wahooMapsCreator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = wahoo_mc
python_requires = >=3.7
install_requires =
    requests==2.27.*
    shapely==1.8.*

[options.package_data]
wahoo_mc = resources/*.*, resources/**/*.*, resources/*/*/*.*, resources/*/*/*/*.*